# practic_3

./: .env.example  .gitignore  Makefile  README.MD  endpoints.py  pyproject.toml  settings.py
api/: Dockerfile
api/src/: api_router.py  app.py  main.py  models.py  rag.py  settings.py
api/src/utils/: functions.py  logger.py  vector_db.py
docker/: docker-compose.yml
ui/: Dockerfile
ui/src/: launch.py  main_page.py
